--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "job-board": "file:",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^6.10.0",
+    "styled-components": "^5.3.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
