--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "job-board": "file:",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
     "styled-components": "^5.3.10"
   },
